--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
+    "typeRoots": ["node_modules/@types"],
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
