--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "deploy": "vercel --prod"
   },
   "dependencies": {
+    "@lottiefiles/lottie-player": "^2.0.12",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
+    "@sentry/nextjs": "^8.47.0",
     "@tabler/icons-react": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "debug": "^4.4.0",
     "framer-motion": "^11.15.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.365.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.21",
@@ -45,6 +49,7 @@
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "webpack": "^5.97.1"
   }
 }
